package dam.a47736.safedose.ui.bottomnavbarpages

import androidx.compose.ui.graphics.vector.ImageVector

data class NavItem(
    val label: String,
    val icon: ImageVector,
)
